INI: Add support for new builds (fix #177)
10.0.14955.1000 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2016-10-21
+Updated=2016-10-28
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1377,6 +1377,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=22EE0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14955.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A78D8
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=94A6B
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BA85
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1CEDD
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=32629
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=11E9E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=3F680
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22EE0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2139,6 +2165,25 @@ lMaxUserSessions.x64  =EC480
 bAppServerAllowed.x64 =EC484
 
 [10.0.14951.1000-SLInit]
+bInitialized.x86      =C5F68
+bServerSku.x86        =C5F6C
+lMaxUserSessions.x86  =C5F70
+bAppServerAllowed.x86 =C5F74
+bRemoteConnAllowed.x86=C5F78
+bMultimonAllowed.x86  =C5F7C
+ulMaxDebugSessions.x86=C5F80
+bFUSEnabled.x86       =C5F84
+
+bServerSku.x64        =EF3D0
+lMaxUserSessions.x64  =EF3D4
+bAppServerAllowed.x64 =EF3D8
+bInitialized.x64      =F0470
+bRemoteConnAllowed.x64=F0474
+bMultimonAllowed.x64  =F0478
+ulMaxDebugSessions.x64=F047C
+bFUSEnabled.x64       =F0480
+
+[10.0.14955.1000-SLInit]
 bInitialized.x86      =C5F68
 bServerSku.x86        =C5F6C
 lMaxUserSessions.x86  =C5F70
