INI: Add support for new builds (fix #199)
10.0.15014.1000 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-01-15
+Updated=2017-01-21
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1559,6 +1559,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=E000
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15014.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A9648
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=931EB
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=34685
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=274ED
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D739
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1D95E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=47D50
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=E000
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2454,6 +2480,25 @@ ulMaxDebugSessions.x64=F048C
 bFUSEnabled.x64       =F0490
 
 [10.0.15007.1000-SLInit]
+bInitialized.x86      =C6F74
+bServerSku.x86        =C6F78
+lMaxUserSessions.x86  =C6F7C
+bAppServerAllowed.x86 =C6F80
+bRemoteConnAllowed.x86=C6F84
+bMultimonAllowed.x86  =C6F88
+ulMaxDebugSessions.x86=C6F8C
+bFUSEnabled.x86       =C6F90
+
+bServerSku.x64        =F0408
+lMaxUserSessions.x64  =F040C
+bAppServerAllowed.x64 =F0410
+bInitialized.x64      =F0480
+bRemoteConnAllowed.x64=F0484
+bMultimonAllowed.x64  =F0488
+ulMaxDebugSessions.x64=F048C
+bFUSEnabled.x64       =F0490
+
+[10.0.15014.1000-SLInit]
 bInitialized.x86      =C6F74
 bServerSku.x86        =C6F78
 lMaxUserSessions.x86  =C6F7C
