INI: Add support for new builds (fix #203)
10.0.15019.1000 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-01-21
+Updated=2017-01-28
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -33,6 +33,7 @@ CDefPolicy_Query_eax_rcx_jmp=B80001000089813806000090EB
 CDefPolicy_Query_eax_esi=B80001000089862003000090
 CDefPolicy_Query_eax_rdi=B80001000089873806000090
 CDefPolicy_Query_eax_ecx=B80001000089812003000090
+CDefPolicy_Query_eax_ecx_jmp=B800010000898120030000EB0E
 CDefPolicy_Query_eax_rcx=B80001000089813806000090
 
 [6.0.6000.16386]
@@ -1585,6 +1586,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=E000
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15019.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A39F8
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=928FB
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=BADF5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=FBDD
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=A8479
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx_jmp
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=20AAE
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=3C240
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=24480
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2516,3 +2543,22 @@ bRemoteConnAllowed.x64=F0484
 bMultimonAllowed.x64  =F0488
 ulMaxDebugSessions.x64=F048C
 bFUSEnabled.x64       =F0490
+
+[10.0.15019.1000-SLInit]
+bInitialized.x86      =C5F68
+bServerSku.x86        =C5F6C
+lMaxUserSessions.x86  =C5F70
+bAppServerAllowed.x86 =C5F74
+bRemoteConnAllowed.x86=C5F78
+bMultimonAllowed.x86  =C5F7C
+ulMaxDebugSessions.x86=C5F80
+bFUSEnabled.x86       =C5F84
+
+bServerSku.x64        =ECBDC
+lMaxUserSessions.x64  =ECBE0
+bAppServerAllowed.x64 =ECBE4
+bInitialized.x64      =F0490
+bRemoteConnAllowed.x64=F0494
+bMultimonAllowed.x64  =F0498
+ulMaxDebugSessions.x64=F049C
+bFUSEnabled.x64       =F04A0
