INI: Add support for new builds (fix #204)
10.0.15025.1000 (x64 only)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-01-28
+Updated=2017-02-03
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1612,6 +1612,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=24480
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15025.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9259B
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=2C08D
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1DD0E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=E5B8
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2562,3 +2576,13 @@ bRemoteConnAllowed.x64=F0494
 bMultimonAllowed.x64  =F0498
 ulMaxDebugSessions.x64=F049C
 bFUSEnabled.x64       =F04A0
+
+[10.0.15025.1000-SLInit]
+bServerSku.x64        =EE3E0
+lMaxUserSessions.x64  =EE3E4
+bAppServerAllowed.x64 =EE3E8
+bInitialized.x64      =EF488
+bRemoteConnAllowed.x64=EF48C
+bMultimonAllowed.x64  =EF490
+ulMaxDebugSessions.x64=EF494
+bFUSEnabled.x64       =EF498
