INI: Add support for new builds (fix #207)
10.0.15031.0 x86/x64
10.0.15042.0 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-02-03
+Updated=2017-03-01
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1626,6 +1626,58 @@ SLInitHook.x64=1
 SLInitOffset.x64=E5B8
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15031.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5BA8
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8E221
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=30A75
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=2A114
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2B1D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C7B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=4532D
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=D80C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.15042.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5BA8
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8E221
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=30A75
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=2A114
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2B1D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C7B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=4532D
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=D80C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2586,3 +2638,41 @@ bRemoteConnAllowed.x64=EF48C
 bMultimonAllowed.x64  =EF490
 ulMaxDebugSessions.x64=EF494
 bFUSEnabled.x64       =EF498
+
+[10.0.15031.0-SLInit]
+bInitialized.x86      =C2F6C
+bServerSku.x86        =C2F70
+lMaxUserSessions.x86  =C2F74
+bAppServerAllowed.x86 =C2F78
+bRemoteConnAllowed.x86=C2F7C
+bMultimonAllowed.x86  =C2F80
+ulMaxDebugSessions.x86=C2F84
+bFUSEnabled.x86       =C2F88
+
+bServerSku.x64        =E93E0
+lMaxUserSessions.x64  =E93E4
+bAppServerAllowed.x64 =E93E8
+bInitialized.x64      =EA488
+bRemoteConnAllowed.x64=EA48C
+bMultimonAllowed.x64  =EA490
+ulMaxDebugSessions.x64=EA494
+bFUSEnabled.x64       =EA498
+
+[10.0.15042.0-SLInit]
+bInitialized.x86      =C2F6C
+bServerSku.x86        =C2F70
+lMaxUserSessions.x86  =C2F74
+bAppServerAllowed.x86 =C2F78
+bRemoteConnAllowed.x86=C2F7C
+bMultimonAllowed.x86  =C2F80
+ulMaxDebugSessions.x86=C2F84
+bFUSEnabled.x86       =C2F88
+
+bServerSku.x64        =E93E0
+lMaxUserSessions.x64  =E93E4
+bAppServerAllowed.x64 =E93E8
+bInitialized.x64      =EA488
+bRemoteConnAllowed.x64=EA48C
+bMultimonAllowed.x64  =EA490
+ulMaxDebugSessions.x64=EA494
+bFUSEnabled.x64       =EA498
