INI: Add support for new builds (fix #218)
10.0.15055.0 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-03-05
+Updated=2017-03-14
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1730,6 +1730,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=21FFC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15055.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5348
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D2E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=374C5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=181E4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3BAD9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=10B65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=44EFF
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22AEC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2766,3 +2792,22 @@ bFUSEnabled.x64       =EB478
 bServerSku.x64        =EB484
 lMaxUserSessions.x64  =EB488
 bAppServerAllowed.x64 =EB48C
+
+[10.0.15055.0-SLInit]
+bInitialized.x86      =C2F70
+bServerSku.x86        =C2F74
+lMaxUserSessions.x86  =C2F78
+bAppServerAllowed.x86 =C2F7C
+bRemoteConnAllowed.x86=C2F80
+bMultimonAllowed.x86  =C2F84
+ulMaxDebugSessions.x86=C2F88
+bFUSEnabled.x86       =C2F8C
+
+bServerSku.x64        =E83D8
+lMaxUserSessions.x64  =E83DC
+bAppServerAllowed.x64 =E83E0
+bInitialized.x64      =E9490
+bRemoteConnAllowed.x64=E9494
+bMultimonAllowed.x64  =E9498
+ulMaxDebugSessions.x64=E949C
+bFUSEnabled.x64       =E94A0
