--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-03-21
+Updated=2017-03-22
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1808,6 +1808,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=D1EC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.15063.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5D68
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8CAA1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=35075
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=24E74
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=2FCD9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=2DD65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=4549D
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=D1EC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -2884,6 +2910,25 @@ lMaxUserSessions.x64  =E9488
 bAppServerAllowed.x64 =E948C
 
 [10.0.15061.0-SLInit]
+bInitialized.x86      =C2F70
+bServerSku.x86        =C2F74
+lMaxUserSessions.x86  =C2F78
+bAppServerAllowed.x86 =C2F7C
+bRemoteConnAllowed.x86=C2F80
+bMultimonAllowed.x86  =C2F84
+ulMaxDebugSessions.x86=C2F88
+bFUSEnabled.x86       =C2F8C
+
+bInitialized.x64      =E9468
+bRemoteConnAllowed.x64=E946C
+bMultimonAllowed.x64  =E9470
+ulMaxDebugSessions.x64=E9474
+bFUSEnabled.x64       =E9478
+bServerSku.x64        =E9484
+lMaxUserSessions.x64  =E9488
+bAppServerAllowed.x64 =E948C
+
+[10.0.15063.0-SLInit]
 bInitialized.x86      =C2F70
 bServerSku.x86        =C2F74
 lMaxUserSessions.x86  =C2F78
