INI: Add support for new builds (relates to #194)
10.0.14997.1001 (x64 only)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-05-12
+Updated=2017-05-17
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1522,6 +1522,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=26140
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.14997.1001]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=931EB
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=274ED
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1D95E
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=E000
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.15002.1001]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=A9698
@@ -2784,6 +2798,16 @@ bRemoteConnAllowed.x64=EE474
 bMultimonAllowed.x64  =EE478
 ulMaxDebugSessions.x64=EE47C
 bFUSEnabled.x64       =EE480
+
+[10.0.14997.1001-SLInit]
+bServerSku.x64        =F0408
+lMaxUserSessions.x64  =F040C
+bAppServerAllowed.x64 =F0410
+bInitialized.x64      =F0480
+bRemoteConnAllowed.x64=F0484
+bMultimonAllowed.x64  =F0488
+ulMaxDebugSessions.x64=F048C
+bFUSEnabled.x64       =F0490
 
 [10.0.15002.1001-SLInit]
 bInitialized.x86      =C6F74
