INI: Add support for new builds (fix #261)
10.0.16215.1000 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -1966,6 +1966,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=FA30
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.16215.1000]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A7CE8
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8DE21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=39F05
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=28724
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E019
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=CC15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=46462
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=FB00
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -3174,3 +3200,22 @@ bRemoteConnAllowed.x64=E94A4
 bMultimonAllowed.x64  =E94A8
 ulMaxDebugSessions.x64=E94AC
 bFUSEnabled.x64       =E94B0
+
+[10.0.16215.1000-SLInit]
+bInitialized.x86      =C5F78
+bServerSku.x86        =C5F7C
+lMaxUserSessions.x86  =C5F80
+bAppServerAllowed.x86 =C5F84
+bRemoteConnAllowed.x86=C5F88
+bMultimonAllowed.x86  =C5F8C
+ulMaxDebugSessions.x86=C5F90
+bFUSEnabled.x86       =C5F94
+
+bServerSku.x64        =EA3E8
+lMaxUserSessions.x64  =EA3EC
+bAppServerAllowed.x64 =EA3F0
+bInitialized.x64      =EB4A0
+bRemoteConnAllowed.x64=EB4A4
+bMultimonAllowed.x64  =EB4A8
+ulMaxDebugSessions.x64=EB4AC
+bFUSEnabled.x64       =EB4B0
