--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2,7 +2,7 @@
 ; Do not modify without special knowledge
 
 [Main]
-Updated=2017-06-10
+Updated=2017-06-29
 LogFile=\rdpwrap.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -426,6 +426,32 @@ SLInitOffset.x86=18478
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=5DBC0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[6.3.9600.18692]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B3458
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8B2E9
+LocalOnlyCode.x64=nopjmp
+SingleUserPatch.x86=1
+SingleUserOffset.x86=37105
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=37039
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3CFE9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=45835
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=18488
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=5DBD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [6.4.9841.0]
@@ -2060,6 +2086,25 @@ bInitialized.x64      =E44AC
 bMultimonAllowed.x64  =E44B0
 
 [6.3.9600.17415-SLInit]
+bFUSEnabled.x86       =D3068
+lMaxUserSessions.x86  =D306C
+bAppServerAllowed.x86 =D3070
+bInitialized.x86      =D3074
+bMultimonAllowed.x86  =D3078
+bServerSku.x86        =D307C
+ulMaxDebugSessions.x86=D3080
+bRemoteConnAllowed.x86=D3084
+
+bFUSEnabled.x64       =F9054
+lMaxUserSessions.x64  =F9058
+bAppServerAllowed.x64 =F905C
+bInitialized.x64      =F9060
+bMultimonAllowed.x64  =F9064
+bServerSku.x64        =F9068
+ulMaxDebugSessions.x64=F906C
+bRemoteConnAllowed.x64=F9070
+
+[6.3.9600.18692-SLInit]
 bFUSEnabled.x86       =D3068
 lMaxUserSessions.x86  =D306C
 bAppServerAllowed.x86 =D3070
