INI: Add support for new builds (fix #286)
10.0.16251.0 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2044,6 +2044,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=FB00
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.16251.0]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=ABC88
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8EC21
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3A525
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1BCB4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31779
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=DAF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=447FD
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=2183C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -3309,3 +3335,22 @@ bRemoteConnAllowed.x64=EB4A4
 bMultimonAllowed.x64  =EB4A8
 ulMaxDebugSessions.x64=EB4AC
 bFUSEnabled.x64       =EB4B0
+
+[10.0.16251.0-SLInit]
+bInitialized.x86      =C9F78
+bServerSku.x86        =C9F7C
+lMaxUserSessions.x86  =C9F80
+bAppServerAllowed.x86 =C9F84
+bRemoteConnAllowed.x86=C9F88
+bMultimonAllowed.x86  =C9F8C
+ulMaxDebugSessions.x86=C9F90
+bFUSEnabled.x86       =C9F94
+
+bServerSku.x64        =EB3EC
+lMaxUserSessions.x64  =EB3F0
+bAppServerAllowed.x64 =EB3F4
+bInitialized.x64      =EC4A0
+bRemoteConnAllowed.x64=EC4A4
+bMultimonAllowed.x64  =EC4A8
+ulMaxDebugSessions.x64=EC4AC
+bFUSEnabled.x64       =EC4B0
