INI: Add support for new builds
10.0.16241.1001 x86/x64

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -2096,6 +2096,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=2180C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.16241.1001]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A7F38
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8E911
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=39F85
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1BC84
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E119
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=DA55
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=4655D
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=2180C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.16251.0]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=ABC88
@@ -3434,6 +3460,25 @@ ulMaxDebugSessions.x64=EB4AC
 bFUSEnabled.x64       =EB4B0
 
 [10.0.16237.1001-SLInit]
+bInitialized.x86      =C5F78
+bServerSku.x86        =C5F7C
+lMaxUserSessions.x86  =C5F80
+bAppServerAllowed.x86 =C5F84
+bRemoteConnAllowed.x86=C5F88
+bMultimonAllowed.x86  =C5F8C
+ulMaxDebugSessions.x86=C5F90
+bFUSEnabled.x86       =C5F94
+
+bServerSku.x64        =EB3EC
+lMaxUserSessions.x64  =EB3F0
+bAppServerAllowed.x64 =EB3F4
+bInitialized.x64      =EC4A0
+bRemoteConnAllowed.x64=EC4A4
+bMultimonAllowed.x64  =EC4A8
+ulMaxDebugSessions.x64=EC4AC
+bFUSEnabled.x64       =EC4B0
+
+[10.0.16241.1001-SLInit]
 bInitialized.x86      =C5F78
 bServerSku.x86        =C5F7C
 lMaxUserSessions.x86  =C5F80
