INI: Fix bug in DefPolicy patch (fix #486)

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -35,6 +35,7 @@ CDefPolicy_Query_eax_rdi=B80001000089873806000090
 CDefPolicy_Query_eax_ecx=B80001000089812003000090
 CDefPolicy_Query_eax_ecx_jmp=B800010000898120030000EB0E
 CDefPolicy_Query_eax_rcx=B80001000089813806000090
+CDefPolicy_Query_edi_rcx=BF0001000089B938060000909090
 
 [6.0.6000.16386]
 SingleUserPatch.x86=1
@@ -2763,8 +2764,8 @@ DefPolicyPatch.x86=1
 DefPolicyOffset.x86=33569
 DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
-DefPolicyOffset.x64=10E7E
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+DefPolicyOffset.x64=10E78
+DefPolicyCode.x64=CDefPolicy_Query_edi_rcx
 SLInitHook.x86=1
 SLInitOffset.x86=474AD
 SLInitFunc.x86=New_CSLQuery_Initialize
@@ -2789,8 +2790,8 @@ DefPolicyPatch.x86=1
 DefPolicyOffset.x86=33569
 DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
-DefPolicyOffset.x64=10E7E
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+DefPolicyOffset.x64=10E78
+DefPolicyCode.x64=CDefPolicy_Query_edi_rcx
 SLInitHook.x86=1
 SLInitOffset.x86=474AD
 SLInitFunc.x86=New_CSLQuery_Initialize
@@ -2815,8 +2816,8 @@ DefPolicyPatch.x86=1
 DefPolicyOffset.x86=33569
 DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
-DefPolicyOffset.x64=10E7E
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+DefPolicyOffset.x64=10E78
+DefPolicyCode.x64=CDefPolicy_Query_edi_rcx
 SLInitHook.x86=1
 SLInitOffset.x86=474AD
 SLInitFunc.x86=New_CSLQuery_Initialize
