INI: Fix 10.0.14393.2457 x64 offsets

--- a/res/rdpwrap.ini
+++ b/res/rdpwrap.ini
@@ -1373,10 +1373,10 @@ SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14393.2457]
 LocalOnlyPatch.x64=1
-LocalOnlyOffset.x64=8D781
+LocalOnlyOffset.x64=8D811
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x64=1
-SingleUserOffset.x64=2A3D4
+SingleUserOffset.x64=29CF4
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=1B545
